2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.51

2009-05-29  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added a new state, HRDM_STATE_LOADING, showing the loading screen with
	a waiting titlebar.
	Fixes: NB#114248

	* src/home/hd-render-manager.c:
	* src/home/hd-render-manager.h: Added new state and a method to set the
	loading image.
	* src/home/hd-title-bar.c:
	* src/home/hd-title-bar.h: Added methods to allow setting the title and
	the waiting state independently of having a real MBWindowClient.
	* src/launcher/hd-launcher.c:

2009-05-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#115969 Task switcher view doesn't respond in a mentioned scenario.

	The input shape remained 480x800.  The changes will make the
	transition from portrait to tasw smoother (looks cooler if
	you slow down the transitions).

	* src/util/hd-util.c:
	  Update the input shape when rotating the screen.
	* src/util/hd-transition.h:
	  New interface to tell the transition FSM to go to the specified state.
	* src/util/hd-transition.c:
	  Moved all rotation-transition-related-things here.  Documentation.
	* src/home/hd-render-manager.c:
	  If we'd go from portrait mode to TASK_NAV state go to HOME first,
	  wait until we fade out then go to tasw.
	* src/home/hd-task-navigator.c:
	  Cosmetics.
	* src/mb/hd-comp-mgr.h
	* src/mb/hd-comp-mgr.c:
	  Refactored hd_comp_mgr_setup_input_viewport() to be usable
	  from hd-util.c.

2009-05-29  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#116375, NB#104558 - multiple clicks before home edit menu 
	appears cause all kinds of problems.
	N.B. This does NOT fix NB#117318, so repeated clicking still causes
	the modal blocker to be removed. I am currently investigating this.
	
	* src/home/hd-render-manager.h	
	* src/home/hd-render-manager.c: Add hd_render_manager_*_input_blocker.
	  This blocks all input to the device temporarily (with a timeout in
	  case).